Bug 86075 - X server crashes drawing dashed lines
Summary: X server crashes drawing dashed lines
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: 7.6 (2010.12)
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-09 19:38 UTC by Ian Gay
Modified: 2014-11-12 21:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Crash description and test program (3.60 KB, text/plain)
2014-11-09 19:38 UTC, Ian Gay
no flags Details

Description Ian Gay 2014-11-09 19:38:30 UTC
Created attachment 109170 [details]
Crash description and test program

The attached file gives a complete description and a test program.
Comment 1 Michel Dänzer 2014-11-10 01:55:53 UTC
Please provide more information about the crash; at least the full backtrace from the log file, but preferably a backtrace from gdb with debugging symbols available for the X server and driver binaries.
Comment 2 Chris Wilson 2014-11-10 07:48:48 UTC
commit 0267f5902ddaceced870dcd8451ef8729e33e5c2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 10 07:42:42 2014 +0000

    sna: Check after filtering points before submitting boxes to be drawn
    
    As we clip the points when converting them into GPU boxes, check that we
    have something to draw before submitting the commands.
    
    Reported-by: Ian Gay <gay@sfu.ca>
    References: https://bugs.freedesktop.org/show_bug.cgi?id=86075
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Please test with the above, thanks.
Comment 3 Ian Gay 2014-11-10 16:37:55 UTC
gdb is not too helpful.
I start in a Linux console (so I can see something after crash) then
gdb progname
run

Nothing happens in console. Then I switch back to KDE, crash occurs, and I switch back to console, where I see
--------------
XIO:  fatal IO error 11 (Resource temporarily unavailable) on X server ":0"
      after 1267 requests (9 known processed) with 0 events remaining.
[Inferior 1 (process 1562) exited with code 01]
---------
At this point I give bt command to gdb, which simply replies
No stack.

==================================================================

Here is the complete traceback from Xorg.0.log.old
--------------
[   109.016] (II) AIGLX: Resuming AIGLX clients after VT switch
[   109.016] (II) intel(0): switch to mode 1600x1200@60.0 on HDMI1 using pipe 0, position (0, 0), rotation normal, reflection none
[   109.108] (EE) 
[   109.108] (EE) Backtrace:
[   109.108] (EE) 0: /usr/bin/Xorg (xorg_backtrace+0x48) [0x58e8f8]
[   109.108] (EE) 1: /usr/bin/Xorg (0x400000+0x192929) [0x592929]
[   109.108] (EE) 2: /lib64/libc.so.6 (0x7f23425fc000+0x35550) [0x7f2342631550]
[   109.108] (EE) 3: /usr/lib64/xorg/modules/drivers/intel_drv.so (0x7f233f478000+0xcfd38) [0x7f233f547d38]
[   109.108] (EE) 4: /usr/lib64/xorg/modules/drivers/intel_drv.so (0x7f233f478000+0x25430) [0x7f233f49d430]
[   109.108] (EE) 5: /usr/bin/Xorg (0x400000+0x181d85) [0x581d85]
[   109.108] (EE) 6: /usr/bin/Xorg (0x400000+0x1841c1) [0x5841c1]
[   109.108] (EE) 7: /usr/bin/Xorg (miWideDash+0x142d) [0x585e7d]
[   109.108] (EE) 8: /usr/lib64/xorg/modules/drivers/intel_drv.so (0x7f233f478000+0x4596b) [0x7f233f4bd96b]
[   109.108] (EE) 9: /usr/bin/Xorg (0x400000+0x11b048) [0x51b048]
[   109.108] (EE) 10: /usr/bin/Xorg (0x400000+0x3a03f) [0x43a03f]
[   109.108] (EE) 11: /usr/bin/Xorg (0x400000+0x3d73e) [0x43d73e]
[   109.108] (EE) 12: /usr/bin/Xorg (0x400000+0x4155a) [0x44155a]
[   109.108] (EE) 13: /lib64/libc.so.6 (__libc_start_main+0xf5) [0x7f234261dbe5]
[   109.108] (EE) 14: /usr/bin/Xorg (0x400000+0x2cba1) [0x42cba1]
[   109.108] (EE) 
[   109.108] (EE) Segmentation fault at address 0x7fff5bf94004
[   109.108] (EE) 
Fatal server error:
[   109.108] (EE) Caught signal 11 (Segmentation fault). Server aborting
[   109.108] (EE) 
[   109.108] (EE) 
Please consult the The X.Org Foundation support 
	 at http://wiki.x.org
 for help. 
[   109.108] (EE) Please also check the log file at "/var/log/Xorg.0.log" for additional information.
[   109.108] (EE) 
[   109.108] (II) AIGLX: Suspending AIGLX clients for VT switch
[   109.121] (EE) Server terminated with error (1). Closing log file.
------------

Ian
Comment 4 Chris Wilson 2014-11-12 14:20:18 UTC
Presuming fixed, or rather presuming that the test case triggers the same bug for you as it did for me.
Comment 5 Ian Gay 2014-11-12 17:39:43 UTC
Thanks, Chris. What do I need to do to test your fix on my machine?

Iaan
Comment 6 Chris Wilson 2014-11-12 20:37:00 UTC
The patch is available at http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/

$ git clone git://anongit.freedesktop.org/xorg/driver/xf86-video-intel
$ cd xf86-video-intel
$ ./autogen.sh --prefix=/usr
$ make && sudo make install
$ sudo reboot # or just restart X

The autogen.sh should try and tell you if you are missing any required development packages, though matching that to your distribution may be trickier.
Comment 7 Ian Gay 2014-11-12 21:26:18 UTC
This patch fixes the bug on my system.

Ian


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.